module/logs/A1_Dask_1750696.out

The following have been reloaded with a version change:
  1) anaconda/2023.03 => anaconda/2021.11


CommandNotFoundError: Your shell has not been properly configured to use 'conda activate'.
To initialize your shell, run

    $ conda init <SHELL_NAME>

Currently supported shells are:
  - bash
  - fish
  - tcsh
  - xonsh
  - zsh
  - powershell

See 'conda init --help' for more information and options.

IMPORTANT: You may need to close and restart your shell after running 'conda init'.


  File "/proj/hyejunglab/MPRA/RNAseq/SCZ/scMPRA/Alejandro_Nanopore_BC_Mapping_viral_mapping/module/A4.analysis.py", line 45
    ~
     ^
SyntaxError: invalid syntax
